--- a/app/views/user/sign_in.html.erb
+++ b/app/views/user/sign_in.html.erb
@@ -4,3 +4,4 @@
     비밀번호 : <%= password_field_tag(:password) %>
     <%= submit_tag("로그인") %>
 <% end %>
+<%= render '/board/ranking', title: @sign_up %>
